Função aero para adicionar paciente na tabela.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<section class="form">
 				<h2>Adicione um novo paciente</h2>
 
-				<form action="">
+				<form action="" id="adiciona">
 					<p class="input_nome">
 						<label for="nome">Nome</label>
 						<input type="text" name="nome" id="nome" placeholder="Digite aqui">
@@ -96,7 +96,7 @@
 						<input type="text" name="gordura" id="gordura" placeholder="Digite aqui">
 					</p>
 
-					<input type="submit" value="Adicionar">
+					<input type="submit" value="Adicionar" id="adicionar-paciente">
 				</form>
 			</section>
 		</main>
