--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
 			</section>
 		</main>
 
-		<script src="js/principal.js">
-			
-		</script>
+		<script src="js/calcula_imc.js"></script>
+		<script src="js/form.js"></script>
 	</body>
 </html>
