Convertando para orientação a objetos/funções.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 				<form action="" id="adiciona">
 					<p class="input_nome">
-						<label for="nome">Nome</label>
+						<label for="nome">Nome:</label>
 						<input type="text" name="nome" id="nome" placeholder="Digite aqui">
 					</p>
 					
