--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 						<tr class="paciente" id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
-							<td class="info-altura">2.00</td>
+							<td class="info-altura">4.00</td>
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
 						</tr>
 
 						<tr class="paciente" >
 							<td class="info-nome">João</td>
-							<td class="info-peso">80</td>
+							<td class="info-peso">0</td>
 							<td class="info-altura">1.72</td>
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
@@ -47,8 +47,8 @@
 
 						<tr class="paciente" >
 							<td class="info-nome">Erica</td>
-							<td class="info-peso">54</td>
-							<td class="info-altura">1.64</td>
+							<td class="info-peso">0</td>
+							<td class="info-altura">0</td>
 							<td class="info-gordura">14</td>
 							<td class="info-imc">0</td>
 						</tr>
@@ -70,6 +70,9 @@
 					</tbody>
 				</table>
 
+				<p id="mensagem-erro">
+
+				</p>
 			</section>
 
 			<section class="form">
@@ -103,5 +106,6 @@
 
 		<script src="js/calcula_imc.js"></script>
 		<script src="js/form.js"></script>
+		<script src="js/remover-paciente.js"></script>
 	</body>
 </html>
