Continuando a integração com o banco JSON.

--- a/index_json.html
+++ b/index_json.html
@@ -72,7 +72,7 @@
 							<td class="info-imc">0</td>
 						</tr> -->
 					</tbody>
-				</table>
+				</table><!--  -->
 			</section>
 
 			<section class="form">
@@ -106,6 +106,12 @@
 			</section>
 		</main>
 
+		<script src="js/calcula_imc.js"></script>
 		<script src="js/pacientes.js"></script>
+		<!-- <script src="js/buscar_paciente.js"></script> -->
+		<script src="js/form.js"></script>
+		<script src="js/filtra.js"></script>
+		<script src="js/remover-paciente.js"></script>
+		
 	</body>
 </html>
