Cadastrar pacientes no banco, com verificação.

--- a/index_json.html
+++ b/index_json.html
@@ -112,6 +112,6 @@
 		<script src="js/form.js"></script>
 		<script src="js/filtra.js"></script>
 		<script src="js/remover-paciente.js"></script>
-		
+		<!-- <script src="js/cadastro.js"></script> -->
 	</body>
 </html>
