Edição dos pacientes pronta, com verificação.

--- a/index_json.html
+++ b/index_json.html
@@ -30,6 +30,7 @@
 							<th>Altura(m)</th>
 							<th>Gordura Corporal(%)</th>
 							<th>IMC</th>
+							<th>Ações</th>
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
@@ -72,7 +73,7 @@
 							<td class="info-imc">0</td>
 						</tr> -->
 					</tbody>
-				</table><!--  -->
+				</table>
 			</section>
 
 			<section class="form">
@@ -106,12 +107,12 @@
 			</section>
 		</main>
 
-		<script src="js/calcula_imc.js"></script>
-		<script src="js/pacientes.js"></script>
+		<!-- <script src="js/calcula_imc.js"></script> -->
+		<script src="js/pacientes.js" type="module"></script>
 		<!-- <script src="js/buscar_paciente.js"></script> -->
-		<script src="js/form.js"></script>
+		<script src="js/form.js" type="module"></script>
 		<script src="js/filtra.js"></script>
-		<script src="js/remover-paciente.js"></script>
+		<script src="js/remover-paciente.js" type="module"></script>
 		<!-- <script src="js/cadastro.js"></script> -->
 	</body>
 </html>
