--- a/editar.html
+++ b/editar.html
@@ -19,6 +19,8 @@
         <section class="form">
             <h2>Altere as informações de um paciente.</h2>
 
+            <h3>Para voltar a página anterior clique no título.</h3>
+
             <form action="" id="editar">
                 <p class="input_nome">
                     <label for="nome">Nome:</label>
