--- a/index_json.html
+++ b/index_json.html
@@ -22,6 +22,8 @@
 				<label for="filtrar-tabela">Filtrar por nome:</label>
 				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite aqui o nome do paciente." class="input_nome">
 
+				<h3>Clique no lápis para editar ou na lixeira para excluir, dar um clique duplo num item da tabela também exclui o paciente.</h3>
+
 				<table>
 					<thead>
 						<tr>
