--- a/nao-utillizado/index.html
+++ b/nao-utillizado/index.html
@@ -107,8 +107,8 @@
 		</main>
 
 		<script src="js/calcula_imc.js"></script>
-		<script src="js/form.js"></script>
-		<script src="js/remover-paciente.js"></script>
+		<script src="js/form.js" type="module"></script>
+		<script src="js/remover-paciente.js" type="module"></script>
 		<script src="js/filtra.js"></script>
 	</body>
 </html>
